# Classroom-Assistant-Application-V2

./: README.md  package-lock.json  package.json
src/: App.tsx  Calendar.tsx  Classes.tsx  Grades.tsx  Groups.tsx  Selection.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/Dropdown/: Dropdown.tsx
src/components/Nav/: Nav.module.css  Nav.tsx
